# RAMKeeper

./: .gitignore  CMakeLists.txt  FEATURES.md  README.md  pyproject.toml  setup-cpp.md
.github/workflows/: release.yml
choco/: ramkeeper.nuspec
choco/tools/: VERIFICATION.txt  chocolateyInstall.ps1  chocolateyUninstall.ps1
docs/: index.html
include/: cleaner.h  common.h  config.h  history.h  settings.h  stats.h  status.h  tray.h
res/: app.manifest  resources.rc
src/: cleaner.cpp  config.cpp  history.cpp  main.cpp  settings.cpp  stats.cpp  status.cpp  tray.cpp
tests/: conftest.py  test_ramkeeper.py
tools/: gen_icon.py
winget/manifests/a/ashishpatel26/RAMKeeper/1.0.0/: ashishpatel26.RAMKeeper.installer.yaml  ashishpatel26.RAMKeeper.locale.en-US.yaml  ashishpatel26.RAMKeeper.yaml
winget/manifests/a/ashishpatel26/RAMKeeper/1.0.2/: ashishpatel26.RAMKeeper.installer.yaml  ashishpatel26.RAMKeeper.locale.en-US.yaml  ashishpatel26.RAMKeeper.yaml
winget/manifests/a/ashishpatel26/RAMKeeper/1.0.3/: ashishpatel26.RAMKeeper.installer.yaml  ashishpatel26.RAMKeeper.locale.en-US.yaml  ashishpatel26.RAMKeeper.yaml
winget/manifests/a/ashishpatel26/RAMKeeper/1.1.0/: ashishpatel26.RAMKeeper.installer.yaml
